# dlna-cp

./: .gitignore  README.md  cabal.project  dlna-cp.cabal  stack.yaml
src/: AVTransport.hs  ControlPoint.hs  EventServer.hs  FileServer.hs  Subscribe.hs
src/Network/: UPnP.hs
ssdp-upnp/: ssdp-upnp.cabal
ssdp-upnp/Network/: SSDP.hs
